Added basic latest threats. Added country highlights.

--- a/vc10/mcafee_threat_wall.vcxproj
+++ b/vc10/mcafee_threat_wall.vcxproj
@@ -122,13 +122,19 @@
     <ClInclude Include="..\src\container\range.h" />
     <ClInclude Include="..\src\events\media_events.h" />
     <ClInclude Include="..\src\math\circle.h" />
-    <ClInclude Include="..\src\model\country_time..h" />
+    <ClInclude Include="..\src\model\country_time.h" />
+    <ClInclude Include="..\src\model\latest_threat_model.h" />
     <ClInclude Include="..\src\model\movie_model.h" />
+    <ClInclude Include="..\src\model\threat_data_model.h" />
     <ClInclude Include="..\src\model\ticker_model.h" />
     <ClInclude Include="..\src\query\media_query.h" />
     <ClInclude Include="..\src\query\news_query.h" />
     <ClInclude Include="..\src\query\query_handler.h" />
+    <ClInclude Include="..\src\query\threat_query.h" />
     <ClInclude Include="..\src\touch\momentum.h" />
+    <ClInclude Include="..\src\ui\latest_threats\latest_threats_view.h" />
+    <ClInclude Include="..\src\ui\latest_threats\threat_item.h" />
+    <ClInclude Include="..\src\ui\map\country_view.h" />
     <ClInclude Include="..\src\ui\map\map_view.h" />
     <ClInclude Include="..\src\ui\ticker\ticker_item.h" />
     <ClInclude Include="..\src\ui\ticker\ticker_view.h" />
@@ -148,7 +154,11 @@
     <ClCompile Include="..\src\query\media_query.cpp" />
     <ClCompile Include="..\src\query\news_query.cpp" />
     <ClCompile Include="..\src\query\query_handler.cpp" />
+    <ClCompile Include="..\src\query\threat_query.cpp" />
     <ClCompile Include="..\src\touch\momentum.cpp" />
+    <ClCompile Include="..\src\ui\latest_threats\latest_threats_view.cpp" />
+    <ClCompile Include="..\src\ui\latest_threats\threat_item.cpp" />
+    <ClCompile Include="..\src\ui\map\country_view.cpp" />
     <ClCompile Include="..\src\ui\map\map_view.cpp" />
     <ClCompile Include="..\src\ui\ticker\ticker_item.cpp" />
     <ClCompile Include="..\src\ui\ticker\ticker_view.cpp" />
