--- a/vc10/mcafee_threat_wall.vcxproj
+++ b/vc10/mcafee_threat_wall.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="..\src\app\threat_app.h" />
     <ClInclude Include="..\src\container\range.h" />
     <ClInclude Include="..\src\events\media_events.h" />
+    <ClInclude Include="..\src\events\threat_events.h" />
     <ClInclude Include="..\src\math\circle.h" />
     <ClInclude Include="..\src\model\country_time.h" />
     <ClInclude Include="..\src\model\latest_threat_model.h" />
@@ -132,6 +133,8 @@
     <ClInclude Include="..\src\query\query_handler.h" />
     <ClInclude Include="..\src\query\threat_query.h" />
     <ClInclude Include="..\src\touch\momentum.h" />
+    <ClInclude Include="..\src\ui\button\image_button.h" />
+    <ClInclude Include="..\src\ui\circles\threat_circles.h" />
     <ClInclude Include="..\src\ui\latest_threats\latest_threats_view.h" />
     <ClInclude Include="..\src\ui\latest_threats\threat_item.h" />
     <ClInclude Include="..\src\ui\map\country_view.h" />
@@ -150,12 +153,15 @@
     <ClCompile Include="..\src\app\threat_app.cpp" />
     <ClCompile Include="..\src\container\range.cpp" />
     <ClCompile Include="..\src\events\media_events.cpp" />
+    <ClCompile Include="..\src\events\threat_events.cpp" />
     <ClCompile Include="..\src\math\circle.cpp" />
     <ClCompile Include="..\src\query\media_query.cpp" />
     <ClCompile Include="..\src\query\news_query.cpp" />
     <ClCompile Include="..\src\query\query_handler.cpp" />
     <ClCompile Include="..\src\query\threat_query.cpp" />
     <ClCompile Include="..\src\touch\momentum.cpp" />
+    <ClCompile Include="..\src\ui\button\image_button.cpp" />
+    <ClCompile Include="..\src\ui\circles\threat_circles.cpp" />
     <ClCompile Include="..\src\ui\latest_threats\latest_threats_view.cpp" />
     <ClCompile Include="..\src\ui\latest_threats\threat_item.cpp" />
     <ClCompile Include="..\src\ui\map\country_view.cpp" />
