--- a/vc10/mcafee_threat_wall.vcxproj
+++ b/vc10/mcafee_threat_wall.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="..\src\app\threat_app.h" />
     <ClInclude Include="..\src\container\range.h" />
     <ClInclude Include="..\src\events\media_events.h" />
+    <ClInclude Include="..\src\events\state_events.h" />
     <ClInclude Include="..\src\events\threat_events.h" />
     <ClInclude Include="..\src\math\circle.h" />
     <ClInclude Include="..\src\model\country_time.h" />
@@ -135,12 +136,16 @@
     <ClInclude Include="..\src\touch\momentum.h" />
     <ClInclude Include="..\src\ui\button\image_button.h" />
     <ClInclude Include="..\src\ui\circles\threat_circles.h" />
+    <ClInclude Include="..\src\ui\clock\clock_view.h" />
     <ClInclude Include="..\src\ui\latest_threats\latest_threats_view.h" />
     <ClInclude Include="..\src\ui\latest_threats\threat_item.h" />
     <ClInclude Include="..\src\ui\map\country_view.h" />
     <ClInclude Include="..\src\ui\map\map_view.h" />
+    <ClInclude Include="..\src\ui\threat_search\threat_search_view.h" />
     <ClInclude Include="..\src\ui\ticker\ticker_item.h" />
     <ClInclude Include="..\src\ui\ticker\ticker_view.h" />
+    <ClInclude Include="..\src\ui\video_player\video_player_view.h" />
+    <ClInclude Include="..\src\ui\video_player\video_thumbnail.h" />
     <ClInclude Include="..\src\util\time_seconds.h" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +158,7 @@
     <ClCompile Include="..\src\app\threat_app.cpp" />
     <ClCompile Include="..\src\container\range.cpp" />
     <ClCompile Include="..\src\events\media_events.cpp" />
+    <ClCompile Include="..\src\events\state_events.cpp" />
     <ClCompile Include="..\src\events\threat_events.cpp" />
     <ClCompile Include="..\src\math\circle.cpp" />
     <ClCompile Include="..\src\query\media_query.cpp" />
@@ -162,12 +168,16 @@
     <ClCompile Include="..\src\touch\momentum.cpp" />
     <ClCompile Include="..\src\ui\button\image_button.cpp" />
     <ClCompile Include="..\src\ui\circles\threat_circles.cpp" />
+    <ClCompile Include="..\src\ui\clock\clock_view.cpp" />
     <ClCompile Include="..\src\ui\latest_threats\latest_threats_view.cpp" />
     <ClCompile Include="..\src\ui\latest_threats\threat_item.cpp" />
     <ClCompile Include="..\src\ui\map\country_view.cpp" />
     <ClCompile Include="..\src\ui\map\map_view.cpp" />
+    <ClCompile Include="..\src\ui\threat_search\threat_search_view.cpp" />
     <ClCompile Include="..\src\ui\ticker\ticker_item.cpp" />
     <ClCompile Include="..\src\ui\ticker\ticker_view.cpp" />
+    <ClCompile Include="..\src\ui\video_player\video_player_view.cpp" />
+    <ClCompile Include="..\src\ui\video_player\video_thumbnail.cpp" />
     <ClCompile Include="..\src\util\time_seconds.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
